Update PR Limits action version and build process

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Checks the number of files and line modifications in a PR",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build index.js"
   },
   "repository": {
     "type": "git",
