--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pr-limits",
   "version": "1.0.0",
   "description": "Checks the number of files and line modifications in a PR",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build main.js -o ./"
+    "build": "ncc build src/index.ts --license licenses.txt"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.0",
+    "@vercel/ncc": "^0.38.1",
+    "typescript": "^5.3.3"
   }
 }
