--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pr-limits",
   "version": "1.0.0",
   "description": "Checks the number of files and line modifications in a PR",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "ncc build src/index.ts --license licenses.txt"
   },
